bin_PROGRAMS = cppwss
cppwss_CXXFLAGS = -DBOOST_REGEX_DYN_LINK
cppwss_LDFLAGS = -lboost_system-mt -lboost_regex-mt
cppwss_SOURCES = \
				 main.cpp \
				 helloworld.cpp \
				 server.cpp \
				 connection_manager.cpp \
				 connection.cpp \
				 packet_parser.cpp \
				 http_header_packet_parser.cpp \
				 dummy_packet_parser.cpp
